# NesEmulator

./: .gitignore  CMakeLists.txt  CMakePresets.json
cmake/: windows.cmake
src/: app.cpp  apu.cpp  bus.cpp  cartridge.cpp  controller.cpp  cpu.cpp  main.cpp  mapper.cpp  ppu.cpp  timing.cpp  window.cpp
src/include/: app.h  apu.h  bus.h  cartridge.h  const.h  controller.h  cpu.h  log.h  mapper.h  ppu.h  timing.h  types.h  window.h
src/test/: check_log.hpp
